Use helper and KAuth for cache dropping

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -904,6 +904,9 @@
    <property name="checkable">
     <bool>true</bool>
    </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Flush I/O Disk Cache</string>
    </property>
