--- a/src/settings.ui
+++ b/src/settings.ui
@@ -283,11 +283,37 @@
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
    </property>
   </widget>
-  <widget class="QComboBox" name="Measuring_Time">
+  <widget class="QComboBox" name="MeasuringTime">
    <property name="geometry">
     <rect>
      <x>170</x>
      <y>170</y>
+     <width>111</width>
+     <height>26</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_9">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>200</y>
+     <width>151</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Interval time</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="IntervalTime">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>200</y>
      <width>111</width>
      <height>26</height>
     </rect>
