Passing the list of available storages from the helper

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -693,7 +693,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="comboBox_Dirs">
+      <widget class="QComboBox" name="comboBox_Storages">
        <property name="enabled">
         <bool>true</bool>
        </property>
@@ -706,11 +706,31 @@
        <property name="editable">
         <bool>false</bool>
        </property>
-       <item>
-        <property name="text">
-         <string>Add a directory</string>
-        </property>
-       </item>
+       <property name="currentText">
+        <string notr="true"/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="refreshStoragesButton">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>31</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>31</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset theme="view-refresh"/>
+       </property>
       </widget>
      </item>
      <item>
