--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -729,7 +729,8 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset theme="view-refresh"/>
+        <iconset theme="view-refresh">
+         <normaloff>.</normaloff>.</iconset>
        </property>
       </widget>
      </item>
