--- a/src/settings.ui
+++ b/src/settings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>536</width>
-    <height>314</height>
+    <width>496</width>
+    <height>569</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,194 +16,130 @@
   <property name="locale">
    <locale language="English" country="UnitedStates"/>
   </property>
-  <widget class="QLabel" name="label">
+  <widget class="QComboBox" name="DefaultProfile_Test_1_BlockSize">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>40</y>
-     <width>151</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Sequential (1)</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="SEQ_1_BlockSize">
-   <property name="geometry">
-    <rect>
-     <x>170</x>
-     <y>40</y>
+     <x>130</x>
+     <y>70</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" name="SEQ_1_Queues">
+  <widget class="QComboBox" name="DefaultProfile_Test_1_Queues">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>40</y>
+     <x>250</x>
+     <y>70</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" name="SEQ_1_Threads">
+  <widget class="QComboBox" name="DefaultProfile_Test_1_Threads">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>40</y>
+     <x>370</x>
+     <y>70</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" name="SEQ_2_BlockSize">
+  <widget class="QComboBox" name="DefaultProfile_Test_2_BlockSize">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>80</y>
+     <x>130</x>
+     <y>110</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QComboBox" name="DefaultProfile_Test_2_Threads">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>80</y>
-     <width>151</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Sequential (2)</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="SEQ_2_Threads">
-   <property name="geometry">
-    <rect>
-     <x>410</x>
-     <y>80</y>
+     <x>370</x>
+     <y>110</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" name="SEQ_2_Queues">
+  <widget class="QComboBox" name="DefaultProfile_Test_2_Queues">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>80</y>
+     <x>250</x>
+     <y>110</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" name="RND_1_Threads">
+  <widget class="QComboBox" name="DefaultProfile_Test_3_Threads">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>120</y>
+     <x>370</x>
+     <y>150</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" name="RND_1_BlockSize">
+  <widget class="QComboBox" name="DefaultProfile_Test_3_BlockSize">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>120</y>
+     <x>130</x>
+     <y>150</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" name="RND_1_Queues">
+  <widget class="QComboBox" name="DefaultProfile_Test_3_Queues">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>120</y>
+     <x>250</x>
+     <y>150</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QComboBox" name="DefaultProfile_Test_4_Queues">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>120</y>
-     <width>151</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Random (1)</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>160</y>
-     <width>151</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Random (2)</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="RND_2_Queues">
-   <property name="geometry">
-    <rect>
-     <x>290</x>
-     <y>160</y>
+     <x>250</x>
+     <y>190</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" name="RND_2_Threads">
+  <widget class="QComboBox" name="DefaultProfile_Test_4_Threads">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>160</y>
+     <x>370</x>
+     <y>190</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QComboBox" name="RND_2_BlockSize">
+  <widget class="QComboBox" name="DefaultProfile_Test_4_BlockSize">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>160</y>
+     <x>130</x>
+     <y>190</y>
      <width>111</width>
      <height>31</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label_5">
+  <widget class="QLabel" name="label_BlockSize">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>130</x>
      <y>10</y>
      <width>111</width>
      <height>18</height>
@@ -216,10 +152,10 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_6">
+  <widget class="QLabel" name="label_Queues">
    <property name="geometry">
     <rect>
-     <x>290</x>
+     <x>250</x>
      <y>10</y>
      <width>111</width>
      <height>20</height>
@@ -232,10 +168,10 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_7">
+  <widget class="QLabel" name="label_Threads">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>370</x>
      <y>10</y>
      <width>111</width>
      <height>20</height>
@@ -252,8 +188,8 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>260</y>
-     <width>511</width>
+     <y>520</y>
+     <width>471</width>
      <height>33</height>
     </rect>
    </property>
@@ -273,28 +209,12 @@
     </item>
    </layout>
   </widget>
-  <widget class="QLabel" name="label_8">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>210</y>
-     <width>151</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Measuring time</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-   </property>
-  </widget>
   <widget class="QComboBox" name="MeasuringTime">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>210</y>
-     <width>111</width>
+     <x>10</x>
+     <y>470</y>
+     <width>231</width>
      <height>31</height>
     </rect>
    </property>
@@ -305,30 +225,309 @@
     </size>
    </property>
   </widget>
-  <widget class="QLabel" name="label_9">
-   <property name="geometry">
-    <rect>
-     <x>290</x>
-     <y>210</y>
-     <width>111</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Interval time</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-   </property>
-  </widget>
   <widget class="QComboBox" name="IntervalTime">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>210</y>
+     <x>250</x>
+     <y>470</y>
+     <width>231</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_DefaultProfile">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>40</y>
+     <width>471</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: #f0f0f0; color: black</string>
+   </property>
+   <property name="text">
+    <string>Profile: Default</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="DefaultProfile_Test_1_Pattern">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>70</y>
      <width>111</width>
      <height>31</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_Type">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>111</width>
+     <height>18</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Type</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="DefaultProfile_Test_2_Pattern">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>110</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="DefaultProfile_Test_3_Pattern">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>150</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="DefaultProfile_Test_4_Pattern">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>190</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_PeakPerformanceProfile">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>240</y>
+     <width>471</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: #f0f0f0; color: black</string>
+   </property>
+   <property name="text">
+    <string>Profile: Peak Performance</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="PeakPerformanceProfile_Test_1_Pattern">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>270</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="PeakPerformanceProfile_Test_2_Threads">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>310</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="PeakPerformanceProfile_Test_1_BlockSize">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>270</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="PeakPerformanceProfile_Test_1_Queues">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>270</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="PeakPerformanceProfile_Test_2_Queues">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>310</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="PeakPerformanceProfile_Test_2_Pattern">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>310</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="editable">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="PeakPerformanceProfile_Test_1_Threads">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>270</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="PeakPerformanceProfile_Test_2_BlockSize">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>310</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_DemoProfile">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>360</y>
+     <width>471</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: #f0f0f0; color: black</string>
+   </property>
+   <property name="text">
+    <string>Profile: Demo</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="DemoProfile_Test_1_Pattern">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>390</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="DemoProfile_Test_1_Queues">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>390</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="DemoProfile_Test_1_Threads">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>390</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="DemoProfile_Test_1_BlockSize">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>390</y>
+     <width>111</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_MeasuringTime">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>440</y>
+     <width>231</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: #f0f0f0; color: black</string>
+   </property>
+   <property name="text">
+    <string>Measuring time</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_IntervalTime">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>440</y>
+     <width>231</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: #f0f0f0; color: black</string>
+   </property>
+   <property name="text">
+    <string>Interval time</string>
    </property>
   </widget>
  </widget>
