Add missing code for Hungarian translation

--- a/data/icons/flags/flags.qrc
+++ b/data/icons/flags/flags.qrc
@@ -5,6 +5,7 @@
         <file>CZ.svg</file>
         <file>DE.svg</file>
         <file>FR.svg</file>
+        <file>HU.svg</file>
         <file>IN.svg</file>
         <file>IT.svg</file>
         <file>MX.svg</file>
