Store selected performance profile

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -1209,6 +1209,9 @@
    <property name="checkable">
     <bool>true</bool>
    </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Standard Preset</string>
    </property>
