--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -194,7 +194,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="comboBox_ComparisonField">
+      <widget class="QComboBox" name="comboBox_ComparisonUnit">
        <property name="enabled">
         <bool>true</bool>
        </property>
@@ -209,6 +209,12 @@
          <width>71</width>
          <height>16777215</height>
         </size>
+       </property>
+       <property name="currentText">
+        <string/>
+       </property>
+       <property name="currentIndex">
+        <number>-1</number>
        </property>
        <item>
         <property name="text">
