--- a/data/icons/flags/flags.qrc
+++ b/data/icons/flags/flags.qrc
@@ -11,6 +11,7 @@
         <file>MX.svg</file>
         <file>PL.svg</file>
         <file>RU.svg</file>
+        <file>SE.svg</file>
         <file>SK.svg</file>
         <file>TR.svg</file>
         <file>UA.svg</file>
