--- a/data/icons/flags/flags.qrc
+++ b/data/icons/flags/flags.qrc
@@ -8,6 +8,7 @@
         <file>HU.svg</file>
         <file>IN.svg</file>
         <file>IT.svg</file>
+        <file>JP.svg</file>
         <file>MX.svg</file>
         <file>PL.svg</file>
         <file>RU.svg</file>
