--- a/data/icons/flags/flags.qrc
+++ b/data/icons/flags/flags.qrc
@@ -10,6 +10,7 @@
         <file>IT.svg</file>
         <file>JP.svg</file>
         <file>MX.svg</file>
+        <file>NL.svg</file>
         <file>PL.svg</file>
         <file>RU.svg</file>
         <file>SE.svg</file>
