Integrate Finnish translation

--- a/data/icons/flags/flags.qrc
+++ b/data/icons/flags/flags.qrc
@@ -4,6 +4,7 @@
         <file>CN.svg</file>
         <file>CZ.svg</file>
         <file>DE.svg</file>
+        <file>FI.svg</file>
         <file>FR.svg</file>
         <file>HU.svg</file>
         <file>IN.svg</file>
