Setup zh_TW translation configuration

--- a/data/icons/flags/flags.qrc
+++ b/data/icons/flags/flags.qrc
@@ -17,6 +17,7 @@
         <file>SE.svg</file>
         <file>SK.svg</file>
         <file>TR.svg</file>
+        <file>TW.svg</file>
         <file>UA.svg</file>
         <file>US.svg</file>
     </qresource>
